[package]
name = "lau-plato-nervous"
version = "0.1.0"
edition = "2021"
description = "The nervous system connecting PLATO rooms to the deep math ecosystem"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde_json = "1"

[dev-dependencies]
